@@ -21,8 +21,4 @@ abstract public class Node {
     }
 
     abstract protected void _dump(Dumper d);
-
-    public void acceptLHS(ASTLHSVisitor visitor) {
-        throw new Error("wrong node for acceptLHS: " + getClass().getSimpleName());
-    }
 }
